deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zapsign
  labels:
    app.kubernetes.io/name: zapsign
